holy crap this is defo going to take longer than i thought

--- a/japan/sonicadv/info/nanbei0.html
+++ b/japan/sonicadv/info/nanbei0.html
@@ -16,7 +16,7 @@
 
 <font size=４ color="white"><b>
 
-ソニックチーム南米へ行く（１）
+Sonic Team Goes to South America (1)
 
 </b></font>
 
@@ -28,7 +28,7 @@
 
 <font size=2>
 
-[<a href="nanbei1.html">ソニックチーム南米へ行く(2)</a>]
+[<a href="nanbei1.html">Sonic Team Goes to South America (2)</a>]
 
 </font>
 
@@ -36,67 +36,67 @@
 
 <br>
 
-1996年秋。『ナイツ』開発終了から約半年。<br>
+Autumn, 1996. About half a year has passed since the development of NiGHTS ended.<br>
 
-ソニックチームの面々は新たなる作品づくりに取りかかろうとしていた。<br>
+The members of Sonic Team were about to begin work on a new project.<br>
 
-その作品とは「ソニック」の完全新作である。<p>
-
-
-
-開発スタートにあたって、チームの中心となるメンバー６人は、ソフトの構想を練るため海外取材を敢行した。その行き先とは"中南米"であった。<br>
-
-中南米に数多く存在する古代遺跡を、テレビや書物ではなく自分の目で見ることが必要だったのだ。<p>
-
-ソニックの舞台となる世界。それは太陽の光あふれる南の島にはじまり、ネオンきらびやかなカジノ街、そして密林に潜む古代遺跡。<br>
-
-『ソニック２』の「カジノナイトゾーン」はピンボールやスロットマシンの仕掛けを満載し、傑作と誉れ高い面となった。<br>
-
-これは『ソニック２』開発にあたりラスベガスへ行ったときの経験が豊富に生きているからなのだ。百聞は一見にしかず。<br>
-
-自分で得た経験ほど役に立つものはない。まだ自分の目で見たことのない「古代遺跡」が、新たな発想を生み出す新天地になるかもしれないのだ。<p>
+That work is a completely new version of Sonic.<p>
 
 
 
-取材旅行の計画は速やかに進められ、11月実行に移された。行き先は大きく分けて２箇所。<br>
+At the start of the development, the six core members of the team went overseas for research to develop the concept of the software. The destination was Central and South America.<br>
 
-まず中央アメリカの熱帯林に点在するマヤ遺跡。そして南米大陸のインカである。<br>
+We needed to see the many ancient ruins in Central and South America with our own eyes, not through TV or books.<p>
 
-中も含め、こんな大規模な取材旅行は全員初めてである。<p>
+This is the world in which Sonic takes place. It begins on a sunny southern island, followed by a neon-lit casino town and ancient ruins hidden in the jungle.<br>
+
+The Casino Night Zone in Sonic 2 was a masterpiece, filled with pinball and slow machine gadgets.<br>
+
+This is because we have a wealth of experience from our trip to Las Vegas for the development of Sonic 2. Seeing is believing.<br>
+
+There is nothing more useful than experience gained by oneself. An ancient ruin that you have not yet seen with your own eyes may become a new place to create new ideas.<p>
 
 
 
-つづく...（のかな？）
+Plans for the trip were quickly made, and the trip was put into action in November. There were two main destinations.<br>
+
+First, there was the Mayan ruins scattered in the tropical forests of Central America. Then there are the Incas of South America.<br>
+
+This was the first time for all of us, including those inside, to go on such a large scale reporting trip.<p>
+
+
+
+To be continued... (Is it?)
 
 </td></tr>
 
-<td><img src="img0807/nanbei0.jpg" width="320" height="240" border=1><br>トゥルムで全員集合</td>
+<td><img src="img0807/nanbei0.jpg" width="320" height="240" border=1><br>All together in Tulum</td>
 
-<td><img src="img0807/nanbei1.jpg" width="320" height="240" border=1><br>マチュピチュの現地人</td>
-
-</tr>
-
-<tr>
-
-<td><img src="img0807/nanbei2.jpg" width="320" height="240" border=1><br>ティカルでお昼寝</td>
-
-<td><img src="img0807/nanbei3.jpg" width="320" height="240" border=1><br>カンクンで晩御飯</td>
+<td><img src="img0807/nanbei1.jpg" width="320" height="240" border=1><br>Locals at Machu Picchu</td>
 
 </tr>
 
 <tr>
 
-<td><img src="img0807/nanbei4.jpg" width="320" height="240" border=1><br>海にも行ったよ</td>
+<td><img src="img0807/nanbei2.jpg" width="320" height="240" border=1><br>Taking a nap in Tikal</td>
 
-<td><img src="img0807/nanbei5.jpg" width="320" height="240" border=1><br>とりあえずハマってみた</td>
+<td><img src="img0807/nanbei3.jpg" width="320" height="240" border=1><br>Dinner in Cancun</td>
 
 </tr>
 
 <tr>
 
-<td><img src="img0807/nanbei6.jpg" width="320" height="240" border=1><br>リャマに乗っておでかけ</td>
+<td><img src="img0807/nanbei4.jpg" width="320" height="240" border=1><br>We even went to the beach</td>
 
-<td><img src="img0807/nanbei7.jpg" width="320" height="240" border=1><br>俺たち！ソニックチーム！！</td>
+<td><img src="img0807/nanbei5.jpg" width="320" height="240" border=1><br>I'm hooked for now</td>
+
+</tr>
+
+<tr>
+
+<td><img src="img0807/nanbei6.jpg" width="320" height="240" border=1><br>Going for a ride on a llama</td>
+
+<td><img src="img0807/nanbei7.jpg" width="320" height="240" border=1><br>We are Sonic Team!</td>
 
 </tr>
 
