--- a/japan/sonicadv/snd/cd_4a.html
+++ b/japan/sonicadv/snd/cd_4a.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -930,7 +930,7 @@ Music & Arrangement: J.Senoue</font></td></tr>
 <br>
 </font></td></tr>
 </table>
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <img src="graphic/blue.gif" width="100%" height="8">
