--- a/japan/sonicadv/snd/cd_4b.html
+++ b/japan/sonicadv/snd/cd_4b.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------@ƒ^ƒCƒgƒ‹E”wŒiE•¶šİ’è“™‚Ìİ’è@--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -76,7 +76,7 @@
 <br>
 <a href="music_cd.html"><font color="#ff0000">EMusic CD‚Ìƒy[ƒW‚Ö</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">ESound Section Web Site‚Ìƒgƒbƒvƒy[ƒW‚Ö</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of the Sound Section website</font></a><br>
 <br>
 </font></td></tr>
 </table>
@@ -771,4 +771,4 @@ Music & Arrangement: K.Tokoi</font></td></tr>
 <tr><td bgcolor="#aaaaaa" align="center"><font size="2">
 Music & Arrangement: K.Tokoi</font></td></tr>
 <tr><td bgcolor="#ffffff" align="left"><font size="2">
-ƒzƒ“ƒg‚Éƒtƒ‹‚ÅˆêTŠÔ‚àŠ|‚©‚
+ƒzƒ“ƒg‚Éƒtƒ‹‚ÅˆêTŠÔ‚àŠ|‚©s
