--- a/japan/sonicadv/snd/index.html
+++ b/japan/sonicadv/snd/index.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -49,7 +49,7 @@ timerTwo=window.setTimeout("scrollit_r2l(100)",75);
 }
 }
 <!-- --></script></p>
-<!---------------------　 青オビに挟まれたメイン画像表示 　--------------------->
+<!---------------------Main image display sandwiched between blue obi--------------------->
 
 <p align="center">
 <img src="graphic/blue.gif" width="100%" height="8"><br><br>
@@ -108,7 +108,7 @@ timerTwo=window.setTimeout("scrollit_r2l(100)",75);
 <br>
 </td></tr>
 </table>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="360" align="center">
@@ -146,7 +146,7 @@ in any form without the written permission of the copyright owner.<br>
 <img src="graphic/blue.gif" width="100%" height="8">
 <br><br><fontsize="2">
 <a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 <font size="2"> 
 <address>Feb.1999 SEGA CS Sound Team</address></font>
 </body>
