--- a/japan/sonicadv/snd/nyp_0719.html
+++ b/japan/sonicadv/snd/nyp_0719.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -33,7 +33,7 @@
 <br>
 <a href="r_diary.html"><font color="#ff0000">・Recording Diaryのページへ</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">・Sound Section Web Siteのトップページへ</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of the Sound Section website</font></a><br>
 <br>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
@@ -144,10 +144,10 @@
 <br>
 <a href="r_diary.html"><font color="#ff0000">・Recording Diaryのページへ</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">・Sound Section Web Siteのトップページへ</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of the Sound Section website</font></a><br>
 <br>
 </table>
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <img src="graphic/blue.gif" width="100%" height="8">
