--- a/japan/sonicadv/snd/other_01.html
+++ b/japan/sonicadv/snd/other_01.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------@ƒ^ƒCƒgƒ‹E”wŒiE•¶ŽšÝ’è“™‚ÌÝ’è@--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -51,7 +51,7 @@ MEGA-CD—p‚ÌƒQ[ƒ€uƒeƒfƒBEƒ{[ƒCEƒuƒ‹[ƒXv‚Ì‘¼A—lX‚ÈƒQ[ƒ€‚Ì‹È‚ªƒ”ƒH[ƒJƒ‹ƒ
 </td></tr>
 </table>
 
-<!-----------------------@ ÂƒIƒr‚É‹²‚Ü‚ê‚½ƒŠƒ“ƒNŠÖ˜A @----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -68,7 +68,7 @@ MEGA-CD—p‚ÌƒQ[ƒ€uƒeƒfƒBEƒ{[ƒCEƒuƒ‹[ƒXv‚Ì‘¼A—lX‚ÈƒQ[ƒ€‚Ì‹È‚ªƒ”ƒH[ƒJƒ‹ƒ
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------@ I‚í‚è‚¾‚æ‚ñ @----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Feb.1999 SEGA CS Sound Team</address></font>
