--- a/japan/sonicadv/snd/words_3e.html
+++ b/japan/sonicadv/snd/words_3e.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -8,49 +8,65 @@
 <body>
 <body bgcolor="#000000">
 <body text="#ffffff" link="#ff0000" alink="#7777aa" vlink="#ff0000">
-<!---------------------　 青オビに挟まれたメイン画像表示 　--------------------->
+<!---------------------Main image display sandwiched between blue obi--------------------->
 <p align="center">
 <img src="graphic/blue.gif" width="100%" height="8"><br>
 <img src="graphic/lyrics_3.jpg"><br>
 <img src="graphic/blue.gif" width="100%" height="8"><br>
-<!----------------------------------　 歌詞 　---------------------------------->
+<!----------------------------------Lyrics---------------------------------->
 
-<font size="2">When all alone in my chair, I just go about wishing<br>
+<font size="2">When all alone in my chair, I just go about wishin'<br>
 I wanna be strong, I really wanna be trusted<br>
-When all alone in my bed, I just go about yearning<br>
+When all alone in my bed, I just go about yearnin'<br>
 I wanna be cool, I also wanna be like him<br>
 <br>
-But that's not something I can do so easily<br>
+But that's not somethin' I can do so easily<br>
 This is not simply my way, my style<br>
 Gotta get a hold of my life<br>
 <br>
-* I wanna fly high<br>
+I wanna fly high<br>
 So I can reach the highest of all the heavens<br>
-Somebody will be waiting for me so,<br>
-I have got to fly higher<br>
-<br>
+Somebody will be<br>
+Waiting for me so I have gotta fly higher<br>
 Gotta keep goin'<br>
-Everything is a brand new challange for me<br>
+Everything is a brand new challenge for me<br>
 I will believe in myself<br>
 This is the only start for me<br>
 <br>
-When all alone in my sleep, I just go about dreaming<br>
-I see myself there, having the same adventure<br>
-<br>
-If I just follow you, I will never see the light<br>
+When all alone in my sleep<br>
+I just go about dreamin'<br>
+I see myself there<br>
+having the same adventure<br>
+If I just follow you<br>
+I will never see the light<br>
 Now's the time to find my way through this life<br>
-I'm trying so hard to be strong<br>
+I'm tryin' so hard to be strong<br>
 <br>
-* Repeat<br>
+I wanna fly high<br>
+So I can reach the highest of all the heavens<br>
+Somebody will be<br>
+Waiting for me so I have gotta fly higher<br>
+Gotta keep goin'<br>
+Everything is a brand new challenge for me<br>
+I will believe in myself<br>
+This is the only start for me<br>
 <br>
-(Gumtar solo)<br>
+(Guitar solo)<br>
 <br>
-Many friends help me out, in return I help them<br>
+Many friends help me out<br>
+In return I help them<br>
 Certain things I can do and there are things that only I can do<br>
-No one's alone!<br>
+No one's alone<br>
 <br>
-* Repeat<br></font>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+I wanna fly high<br>
+So I can reach the highest of all the heavens<br>
+Somebody will be<br>
+Waiting for me so I have gotta fly higher<br>
+Gotta keep goin'<br>
+Everything is a brand new challenge for me<br>
+I will believe in myself<br>
+This is the only start for me<br></font>
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -58,16 +74,16 @@ No one's alone!<br>
 <br>
 <a href="words_3j.html">・この曲の対訳を見る</a><br>
 <br>
-<a href="words_4e.html">・次の曲の歌詞を見る</a><br>
+<a href="words_4e.html">View the next song's lyrics</a><br>
 <br>
 <a href="lyrics.html">・Lyricsのページへ</a><br>
 <br>
-<a href="index.html">・Sound Section Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of the Sound Section website</a><br>
 <br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Jan.1999 SEGA CS Sound Team</address></font>
