--- a/japan/sonicadv/snd/words_5e.html
+++ b/japan/sonicadv/snd/words_5e.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -8,12 +8,12 @@
 <body bgcolor="#000000" text="#ffffff" link="#ff0000" alink="#7777aa" vlink="#ff0000">
 
 
-<!---------------------　 青オビに挟まれたメイン画像表示 　--------------------->
+<!---------------------Main image display sandwiched between blue obi--------------------->
 <p align="center">
 <img src="graphic/blue.gif" width="100%" height="8"><br>
 <img src="graphic/lyrics_5.jpg"><br>
 <img src="graphic/blue.gif" width="100%" height="8"><br>
-<!----------------------------------　 歌詞 　---------------------------------->
+<!----------------------------------Lyrics---------------------------------->
 
 <font size="2">I got out my map and chose a place I wanted to go to<br>
 ... Packed up my stuff, set out for adventure ...<br>
@@ -55,24 +55,22 @@ You can be my sweetest honey for enernity<br>
 * Repeat<br>
 <br>
 I honestly need you just as much as you need me<br></font>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="words_5j.html">・この曲の対訳を見る</a><br>
-<br>
-<a href="words_6e.html">・次の曲の歌詞を見る</a><br>
+<a href="words_6e.html">View the next song's lyrics</a><br>
 <br>
 <a href="lyrics.html">・Lyricsのページへ</a><br>
 <br>
-<a href="index.html">・Sound Section Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of the Sound Section website</a><br>
 <br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Jan.1999 SEGA CS Sound Team</address></font>
