--- a/japan/sonicadv/info/nanbei1.html
+++ b/japan/sonicadv/info/nanbei1.html
@@ -16,7 +16,7 @@
 
 <font size=４ color="white"><b>
 
-ソニックチーム南米へ行く（２）
+Sonic Team Goes to South America (2)
 
 </b></font>
 
@@ -28,7 +28,7 @@
 
 <font size=2>
 
-[<a href="nanbei0.html">ソニックチーム南米へ行く(1)</a>][<a href="nanbei2.html">ソニックチーム南米へ行く(3)</a>]
+[<a href="nanbei0.html">Sonic Team Goes to South America (1)</a>][<a href="nanbei2.html">Sonic Team Goes to South America (3)</a>]
 
 </font>
 
@@ -36,55 +36,55 @@
 
 <br>
 
-26日、成田空港からアメリカのダラス空港経由でメキシコのカンクンへ飛ぶ。
+On the 26th, we flew from Narita Airport to Cancun, Mexico via Dallas Airport in the US.
 
 <p>
 
-27日、時差ボケに慣れる間もなく車を飛ばす。最初に訪れた遺跡はメキシコ最大のマヤ遺跡「チチェンイツァー遺跡」だ。<br>
+On the 27th, we drove off before we had time to get used to the jet lag. The first site we visited was the Chichen Itza Ruins, the largest Mayan ruins in Mexico.<br>
 
-蛇を神とした彫刻、所々に顔を出すピラミッド、柱や壁に掘られた壁画、崩れかけた塔や石柱、建物の間から生えた草木、細い通路……。<br>
+Carvings of snakes as gods, pyramids peeking out in various places, murals carved into pillars and walls, crumbling towers and stone pillars, plants, and trees growing between buildings, and narrow passageways.<br>
 
-「冒険」という要素で必ず登場する様々な素材が、ここにはすべてそろっている。
+All the various materials that must appear in an adventure are here.
 
-石でできたピラミッド「カスティーヨ」からの風景は、自分たちが日本から遠く離れた土地にきたということを強く意識させた。
-
-<p>
-
-28日は「トゥルム遺跡」へ向かう。トゥルムはカリブ海に直接面している。<br>
-
-「海と遺跡」という聞きなれないカップリングはまったく予想もしない映像だった。潅木の生えた広い荒れ地の向こうに連なる石壁。
-
-海と思われるその方向からは、絶えず海の香りと南国の風が強く吹き付ける。
-
-石壁の小さな入り口をると、手入れの行き届いた緑の芝地に転々とした石造りの家々。
-
-それを見下ろすように海へと張り出した崖の上には巨大な神殿がそびえる。そこを珊瑚礁に囲まれたカリブの美しい海が護っている。<br>
-
-完全なるリアリティと幻想的な青と緑のコントラストはそれまでの遺跡のイメージを払拭するに十分な衝撃だった。
+The view from the stone pyramid Castillo made us very aware that we were in a land far away from Japan.
 
 <p>
 
-29日。船でコズメル島の「サンヘルバシオ遺跡」へ。南の島に浮かぶ遺跡なんて『ソニック３』のシチュエーションそのものではないか！
+On the 28th, we headed to the Tulum Ruins. Tulum is located directly on the Caribbean Sea.<br>
+
+The unfamiliar coupling of sea and ruins was a completely unexpected image. A series of stone walls beyond a wide wasteland of bushes.
+
+From the direction of what seemsed to be the ocean, the scent of the sea and the tropical breeze blew strongly and constantly.
+
+Through a small entrance with a stone wall, you can see stone houses sprawled across a well-kept green lawn.
+
+A huge temple towers of the cliffs that overhang the sea. It is surrounded by coral reefs and protected by the beautiful Caribbean sea.<br>
+
+The contrast between the perfect reality and the fantastic blue and green was shocking enough to wipe out my previous image of the ruins.
+
+<p>
+
+29th. We took a boat to the San Herbacio Ruins on Cozumel Island. Ruins floating on a southern island is just like the situation in Sonic 3!
 
 <p>
 
 
 
-つづく。
+To be continued.
 
 </td></tr>
 
-<td><img src="img0817/nan0817b.jpg" width="320" height="240" border=1><br>カンクンのホテルはオーシャンビュー</td>
+<td><img src="img0817/nan0817b.jpg" width="320" height="240" border=1><br>Cancun hotels with ocean views</td>
 
-<td><img src="img0817/nan0817d.jpg" width="320" height="240" border=1><br>のませろ～</td>
+<td><img src="img0817/nan0817d.jpg" width="320" height="240" border=1><br>Give me a drink!</td>
 
 </tr>
 
 <tr>
 
-<td><img src="img0817/nan0817c.jpg" width="320" height="240" border=1><br>チチェンイツァーでなごむ</td>
+<td><img src="img0817/nan0817c.jpg" width="320" height="240" border=1><br>Relaxing at Chichen Itza</td>
 
-<td><img src="img0817/nan0817a.jpg" width="320" height="240" border=1><br>やらずにゃおれないキメポーズ</td>
+<td><img src="img0817/nan0817a.jpg" width="320" height="240" border=1><br>Irresistible pose</td>
 
 </tr>
 
