--- a/japan/sonicadv/snd/cd_1.html
+++ b/japan/sonicadv/snd/cd_1.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -121,7 +121,7 @@ I hope people will enjoy listening to it as much as I have.<br>
 </td></tr>
 </table>
 
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -136,7 +136,7 @@ I hope people will enjoy listening to it as much as I have.<br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Jan.1999 SEGA CS Sound Team</address></font>
