--- a/japan/sonicadv/snd/cd_3.html
+++ b/japan/sonicadv/snd/cd_3.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -289,7 +289,7 @@ CMでおなじみのメインテーマのリミックス。<br>
 歌詞は違うところからは持ってきてはいるけど、元曲にある歌詞ばかりだと思うよ。（せのうえ）<br>
 </font></td></tr>
 </table>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -302,7 +302,7 @@ CMでおなじみのメインテーマのリミックス。<br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Jan.1999 SEGA CS Sound Team</address></font>
