--- a/japan/sonicadv/snd/cd_4.html
+++ b/japan/sonicadv/snd/cd_4.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -81,7 +81,7 @@
 <font size="5"><i><b><pre>
 <a href="cd_4a.html">Side - A</a>      <a href="cd_4b.html">Side - B</a>
 </pre></b></i></font></td></tr></table>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
