--- a/japan/sonicadv/snd/photo_ny.html
+++ b/japan/sonicadv/snd/photo_ny.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -55,7 +55,7 @@ New Yorkでのレコーディング中に撮った写真を並べてコメントをつけたという<br>
 <br>
 <a href="r_diary.html"><font color="#ff0000">・Recording Diaryのページへ</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">・Sound Section Web Siteのトップページへ</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of the Sound Section website</font></a><br>
 <br>
 </font></td></tr>
 </table>
@@ -220,11 +220,11 @@ New Yorkでのレコーディング中に撮った写真を並べてコメントをつけたという<br>
 <br>
 <a href="r_diary.html"><font color="#ff0000">・Recording Diaryのページへ</font></a><br>
 <br>
-<a href="index.html"><font color="#ff0000">・Sound Section Web Siteのトップページへ</font></a><br>
+<a href="index.html"><font color="#ff0000">To the top page of the Sound Section website</font></a><br>
 <br>
 </font></td></tr>
 </table>
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <img src="graphic/blue.gif" width="100%" height="8">
