--- a/japan/sonicadv/snd/r_d_la.html
+++ b/japan/sonicadv/snd/r_d_la.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -26,7 +26,7 @@
 <font size="3" color="#ff0000"><i><b>UNDER CONSTRUCTION</font></b></i><br>
 </td></tr>
 </table>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -34,12 +34,12 @@
 <br>
 <a href="r_diary.html">・Recording Diaryのページへ</a><br>
 <br>
-<a href="index.html">・Sound Section Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of the Sound Section website</a><br>
 <br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2" color="#ff0000"><address>Jan.1999 SEGA CS Sound Team</address></font>
