--- a/japan/sonicadv/snd/r_d_ny.html
+++ b/japan/sonicadv/snd/r_d_ny.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -8,7 +8,7 @@
 <body>
 <body text="#000000" link="#ff0000" alink="#7777aa" vlink="#ff0000">
 <body background="graphic/back_cd2.jpg">
-<!---------------------　 青オビに挟まれたメイン画像表示 　--------------------->
+<!---------------------Main image display sandwiched between blue obi--------------------->
 <p align="center">
 <img src="graphic/blue.gif" width="100%" height="8"><br>
 <br>
@@ -52,7 +52,7 @@ Feb./15/1999<br>
 <font size="5"><i><b><pre>
 <a href="diary_ny.html">Diary</a>      <a href="photo_ny.html">Photo</a>
 </pre></b></i></font></td></tr></table>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
