--- a/japan/sonicadv/snd/rare_03.html
+++ b/japan/sonicadv/snd/rare_03.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -45,7 +45,7 @@ No.1 DANCE AMERICAN PIE<br>
 </td></tr>
 </table>
 
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -62,7 +62,7 @@ No.1 DANCE AMERICAN PIE<br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Feb.1999 SEGA CS Sound Team</address></font>
