--- a/japan/sonicadv/snd/snd_info.html
+++ b/japan/sonicadv/snd/snd_info.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -8,7 +8,7 @@
 <body>
 <body text="#000000" link="#ff0000" alink="#7777aa" vlink="#ff0000">
 <body background="graphic/back_dj.jpg">
-<!---------------------　 青オビに挟まれたメイン画像表示 　--------------------->
+<!---------------------Main image display sandwiched between blue obi--------------------->
 <p align="center">
 <img src="graphic/blue.gif" width="100%" height="8"><br>
 <br>
@@ -366,19 +366,19 @@ MIDIデータが収録!!<br>
 価格：\1/500（税込み）<br>
 </font></td></tr>
 </table>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
 <tr><td align="center" bgcolor="#ccffff"><font size="2">
 <br>
-<a href="index.html">・Sound Section Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of the Sound Section website</a><br>
 <br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
 
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Feb.1999 SEGA CS Sound Team</address></font>
