--- a/japan/sonicadv/snd/words_1e.html
+++ b/japan/sonicadv/snd/words_1e.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0//en">
-<!---------------------　タイトル・背景・文字設定等の設定　--------------------->
+<!---------------------Settings for title, background, text, etc.--------------------->
 
 <html>
 <head>
@@ -8,12 +8,12 @@
 <body>
 <body bgcolor="#000000">
 <body text="#ffffff" link="#ff0000" alink="#7777aa" vlink="#ff0000">
-<!---------------------　 青オビに挟まれたメイン画像表示 　--------------------->
+<!---------------------Main image display sandwiched between blue obi--------------------->
 <p align="center">
 <img src="graphic/blue.gif" width="100%" height="8"><br>
 <img src="graphic/lyrics_1.jpg"><br>
 <img src="graphic/blue.gif" width="100%" height="8"><br>
-<!----------------------------------　 歌詞 　---------------------------------->
+<!----------------------------------Lyrics---------------------------------->
 
 <font size="2">
 Thunder, rain, and lightning<br>
@@ -63,7 +63,7 @@ GOTTA OPEN YOUR HEART, DUDE!<br>
 * Repeat<br>
 <br>
 OPEN YOUR HEART, IT'S GONNA BE ALLRIGHT<br></font>
-<!-----------------------　 青オビに挟まれたリンク関連 　----------------------->
+<!-----------------------Link related, sandwiched between the two Obi----------------------->
 
 <img src="graphic/blue.gif" width="100%" height="8">
 <table border=1 width="480" align="center">
@@ -71,16 +71,16 @@ OPEN YOUR HEART, IT'S GONNA BE ALLRIGHT<br></font>
 <br>
 <a href="words_1j.html">・この曲の対訳を見る</a><br>
 <br>
-<a href="words_2e.html">・次の曲の歌詞を見る</a><br>
+<a href="words_2e.html">View the next song's lyrics</a><br>
 <br>
 <a href="lyrics.html">・Lyricsのページへ</a><br>
 <br>
-<a href="index.html">・Sound Section Web Siteのトップページへ</a><br>
+<a href="index.html">To the top page of the Sound Section website</a><br>
 <br>
 </font></td></tr>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
-<!-------------------------------　 終わりだよん 　----------------------------->
+<!-------------------------------It's over----------------------------->
 
 
 <font size="2"><address>Feb.1999 SEGA CS Sound Team</address></font>
