--- a/japan/oldteam/emain.html
+++ b/japan/oldteam/emain.html
@@ -10,7 +10,7 @@
 <a name="top"></a><p>
 <font size=-1>
 <b>
-This is the page of The Team Sonic, and please keep in touch,<br>
+This is the page of the Sonic Team, and please keep in touch,<br>
 as this is the place where you get the newest info.
 </b>
 </font>
@@ -24,12 +24,12 @@ as this is the place where you get the newest info.
 </font>
 <img src="gif/bar.gif"><p>
 <font size=+1><b>
-<a href="newe.html"><img border="0" src="gif/new.gif"><br>What's New ?</a><p>
+<a href="newe.html"><img border="0" src="gif/new.gif"><br>What's New?</a><p>
 </b></font>
 <a name="1"></a>
 <img src="gif/bar.gif"><p>
 <b>
-As we promised!  Rare materials!<br>【　<a href="sonium/sonium.html">Sonic Museum </a>　】<br></b>(English version is currentry under construction.)<p>
+As we promised!  Rare materials!<br><a href="sonium/sonium.html">Sonic Museum</a><br></b>(English version is currentry under construction.)<p>
 
 
 
@@ -37,37 +37,37 @@ As we promised!  Rare materials!<br>【　<a href="sonium/sonium.html">Sonic Museu
 <a name="pre1"></a>
 <img src="gif/bar.gif"><p>
 
-● <a href="pre327.html"><b>Small gift from the team.1</b></a>（3/27）
+<a href="pre327.html"><b>Small gift from the team.</b></a> (3/27)
 <p>
-SONIC icon folder<br>
-NiGHTS wall paper<p>
+Sonic icon folder<br>
+NiGHTS wallpaper<p>
 <hr size=4 width=256><p>
 
 <a name="pre2"></a>
-● <a href="pre421.html"><b>Small gift from the team.2</b></a>（4/21）
+<a href="pre421.html"><b>Small gift from the team.</b></a> (4/21)
 <p>
-SONIC s.e.<br>
-SONIC wall papers<p>
+Sonic s.e.<br>
+Sonic wallpapers<p>
 <hr size=4 width=256><p>
 
-● <a href="pre524.html"><b>Small gift from the team.3</b></a>（5/24）
+<a href="pre524.html"><b>Small gift from the team.</b></a> (5/24)
 <p>
-SONIC s.e.<p>
+Sonic s.e.<p>
 
-● <a href="nights/snd/dre/words/wordse.html"><b>Small gift from the team.4</b></a>  (7/26)
- 　<p>
-The Words of "DREAMS DREAMS"<p>
+<a href="nights/snd/dre/words/wordse.html"><b>Small gift from the team.</b></a> (7/26)
+<p>
+The Words of Dreams Dreams<p>
 
-● <a href="ftp/pre7/pre7.html"><b>Small gift from the team.7</b></a>  (9/27)
- 　<p>
-Sonic&Tails' Animation GIF<p>
+<a href="ftp/pre7/pre7.html"><b>Small gift from the team.</b></a> (9/27)
+<p>
+Sonic & Tails Animation GIF<p>
 
-● <a href="ftp/pre8/pre8.html"><<b>Small gift from the team.8</b></a>  　　　
- 　<p>
-SONIC's desktop clock<p>
+<a href="ftp/pre8/pre8.html"><<b>Small gift from the team.</b></a>
+<p>
+Sonic desktop clock<p>
 
 <img src="gif/bar.gif"><p>
-<b>NiGHTS' theme song,<a href="nights/snd/dre/dreams_e.html">"DREAMS DREAMS"</a><br> is now on sale.<p></b>
+<b>NiGHTS' theme song,<a href="nights/snd/dre/dreams_e.html">Dreams Dreams</a><br> is now on sale.<p></b>
 <img border="0" src="gif/single_m.gif">
 <pre>
 </pre>
@@ -76,33 +76,33 @@ SONIC's desktop clock<p>
 CD is now on sale.<p></b>
 <img border="0" src="gif/stmini.gif"><p>
 These will be available only in Japan.<br>
-You might find it in import section of CD store.<p>
+You might find it in the import section of CD stores.<p>
 <font size=-1>
 Manufactured and distributed by<br>
 </font><b>
 PolyGram K.K.
 </b>
 <p>
-<b>Original animation of SONIC is on sale now.</b>（only in Japan）<br>
-(Check the <a href="ftp/pre4/yokokue.html"><b>30-seconds preview</b></a>.）<p>
-<img src="gif/sv1m.gif">　<img src="gif/sv2m.gif"><p>
+<b>Original animation of Sonic is on sale now.</b> (only in Japan)<br>
+(Check the <a href="ftp/pre4/yokokue.html"><b>30-second preview</b></a>.)<p>
+<img src="gif/sv1m.gif"><img src="gif/sv2m.gif"><p>
 
 <font size=3>
--　<b>Coming soon;</b>　-<br>
-（Aug.??）<p>
+-<b>Coming soon;</b>-<br>
+(Aug.??)<p>
 
 Stay tuned!<p>
 
 
 BTW, thanks for all the e-mails!  We all enjoy reading them, and<br>
-that really give us the power to develop the better game.
+that really gives us the power to develop better games.
 <p>
 
 </font>
 <hr size=2 width=256><br>
 <img src="gif/flick.gif"><br>
 <a name="mail"></a>
-<b>● Drop a Message to Sonic Team！<p>
+<b>Drop a Message to Sonic Team!<p>
 <a href="nights/mail/mail_e.html">
 <img border="0" src="gif/text.gif"><br>
 <b>Mail Page</b></a><p>
@@ -117,7 +117,7 @@ that really give us the power to develop the better game.
 This is the page of The Sonic Team.
 <hr>
 <a href="ehome.html"><img alt="*" border="0" src="gif/anm/sonianm.gif">Back</a><br>
-<img src="/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/emain.html">
+<img src="https://web.archive.org/20000630000000/http://sega.co.jp/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/emain.html">
 </center>
 </body>
 </html>
