--- a/japan/oldteam/home.html
+++ b/japan/oldteam/home.html
@@ -7,14 +7,14 @@
 
 <BODY BGCOLOR="#FFFFFF">
 <DIV ALIGN="CENTER"> <BR>
-  <P><A HREF="http://www.sonicteam.com/"><IMG SRC="sonicteam.gif" WIDTH="283" HEIGHT="104" ALT="Sonicteam" BORDER="0"></A><BR>
+  <P><A HREF="/japan/sonicteam"><IMG SRC="sonicteam.gif" WIDTH="283" HEIGHT="104" ALT="Sonicteam" BORDER="0"></A><BR>
 <br>
-<FONT SIZE="+1">ソニックチームＨＰは新しいＵＲＬに移転しました。</FONT><BR>
+<FONT SIZE="+1">The Sonic Team website has been moved to a new URL.</FONT><BR>
 <br>
-新ＵＲＬ：　<b><a href="http://www.sonicteam.com/"><font size=+1 color="#ff0080">http://www.sonicteam.com/</font></a></b><br>
+New URL: <b><a href="/japan/sonicteam"><font size=+1 color="#ff0080">http://www.sonicteam.com/</font></a></b><br>
 <br>
 <br>
-10秒待つか、上の文字をクリックするとジャンプします。<br>
+Wait 10 seconds or lick the test above to jump to it.<br>
 <br>
   </DIV><BR><BR>
 </BODY>
