--- a/japan/oldteam/main.html
+++ b/japan/oldteam/main.html
@@ -207,6 +207,6 @@ Main Page
 
 </table>
 </center>
-<img src="/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/main.html">
+<img src="https://web.archive.org/20000630000000/http://sega.co.jp/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/main.html">
 </body>
 </html>
