--- a/japan/oldteam/team.html
+++ b/japan/oldteam/team.html
@@ -144,7 +144,7 @@ IE4.0やNetscape3.0以降のブラウザーとかでみてください。<br>
 <hr size=4>
 <a href="../sega/home.html"  target="_parent" onMouseOver="window.status='Bye !';return true"><img alt="*" border="0" src="nights/icn/home.gif">セガホームページへ</a>
 
-<img src="/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/">
+<img src="https://web.archive.org/20000630000000/http://sega.co.jp/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/">
 
 </center>
 </body>
