--- a/japan/sonicadv/index.html
+++ b/japan/sonicadv/index.html
@@ -125,7 +125,7 @@ BODY {
     <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/newsonic.html">This is the new Sonic design!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/screen822.html">And now we have screen shots!</a></b>      </td>
+    <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/screen822.html">And now we have screenshots!</a></b>      </td>
   </tr>
   <tr> 
     <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/presonic.html">What will be the design of the new Sonic?</a></b>      </td>
@@ -134,7 +134,7 @@ BODY {
     <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/jikki.html">It's running on a Dreamcast!</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b>Last episode!<a href="info/nanbei3.html">[Serial] Sonic Team Goes to South America (4)</a></b>      </td>
+    <td width="640" height="40" align="center" class="style3"> <b>Last episode!<a href="info/nanbei3.html"> [Serial] Sonic Team Goes to South America (4)</a></b>      </td>
   </tr>
   <tr> 
     <td width="640" height="40" align="center" valign="center" class="style3"> <b><a href="info/818pc.html">One of the latest images of the day!</a></b>      </td>
@@ -149,7 +149,7 @@ BODY {
     </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3"> <b><a href="info/houkoku817.html"><b>preparations for the presentation are going well!</b></a> 
+    <td width="640" height="40" align="center" class="style3"> <b><a href="info/houkoku817.html"><b>Preparations for the presentation are going well!</b></a> 
       </b></td>
   </tr>
   <tr> 
@@ -159,7 +159,7 @@ BODY {
     <td width="640" height="40" align="center" class="style3"> <b><a href="info/nanbei1.html">[Serial] Sonic Team Goes to South America (2)</a></b>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/advlogo.html"><b>Sonic Adventure title logo decided!</b></a> </td>
+    <td width="640" height="40" align="center" class="style3">      <a href="info/advlogo.html"><b>Sonic Adventure title logo revealed!</b></a> </td>
   </tr>
   <tr> 
     <td width="640" height="40" align="center" class="style3">      <a href="info/822cf.html"><b>Announcement CF finally started!</b></a> </td>
@@ -171,7 +171,7 @@ BODY {
     <td width="640" height="40" align="center" class="style3"> <a href="info/nanbei0.html"><b>[Serial?] Sonic Team Goes to South America</b></a>      </td>
   </tr>
   <tr> 
-    <td width="640" height="40" align="center" class="style3">      <a href="info/happyoukai.html"><b>August 22 Sonic Adventure Production Presentation</b></a>  
+    <td width="640" height="40" align="center" class="style3">      <a href="info/happyoukai.html"><b>August 22nd: Sonic Adventure Production Presentation</b></a>  
     </td>
   </tr>
   <tr> 
