--- a/japan/oldteam/newe.html
+++ b/japan/oldteam/newe.html
@@ -29,7 +29,7 @@ How do you like it?<p>
 
 
 <img src="gif/ssonic.gif"><br>
-<b><a href="http://www.sega.com/nights/">NiGHTS home page at S.O.A.</a>!</b>
+<b><a href="https://web.archive.org/20000630000000/http://www.sega.com/nights/">NiGHTS home page at S.O.A.</a>!</b>
 <p>
 <hr size=2 width=256><br>
 
@@ -51,7 +51,7 @@ Editor¡§K.Hoshino/Art Director
 <hr>
 <a href="ehome.html" target="team"><img alt="*" border="0" src="gif/anm/sonianm.gif">Back</a><br>
 </font>
-<img src="/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/newe.html">
+<img src="https://web.archive.org/20000630000000/http://sega.co.jp/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/newe.html">
 </center>
 </body>
 </html>
