whoops, forgot an html file in sonicadv/info!

--- a/japan/sonicadv/info/hekiga/hekiga0.html
+++ b/japan/sonicadv/info/hekiga/hekiga0.html
@@ -20,7 +20,7 @@
 
 <font size=4 color="#ffffff"><b>
 
-ソニック、渋谷に出現！
+Sonic appears in Shibuya!
 
 </b></font>
 
@@ -32,11 +32,11 @@
 
 <font size=3>
 
-１２月の始め頃から、渋谷スペイン坂に、ソニックの壁画を描き始めました。<br>
+Around the beginning of December, we started painting a Sonic mural on Shibuya's Spain Slope.<br>
 
-１２月中はずっと展示されているので、チャンスがある人は、是非見に行ってね！
+It'll be on display all through December, so if you get a chance, go check it out!
 
-そうでないひとはこのページでチェックしよう！
+If not, check out this page!
 
 </font>
 
@@ -52,7 +52,7 @@
 
 <font size=2>
 
-第一日目
+Day 1
 
 </font>
 
@@ -76,11 +76,11 @@
 
 <p>
 
-上：街角の風景的には、こんな感じ。
+Above: In terms of street scenery, this is what it looks like.
 
 </p><p>
 
-左：全体観。
+Left: General view.
 
 </p>
 
@@ -102,11 +102,11 @@
 
 <p>
 
-上：ここにタイトルロゴが入ります。
+Top: The title logo will be placed here.
 
 </p><p>
 
-左：細部アップ。筆のタッチがわかります。
+Left: Detail close up. You can see the touch of the brush.
 
 </p>
 
